--- a/home.css
+++ b/home.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
 }
+
 body{
 background-size: cover;
 background-image: url("imgbackg.jpeg");
@@ -18,6 +19,7 @@ main{
   margin-top: 100px;
   animation: form_transition .7s;
 }
+
 nav{
   width: 100%;
   background-color: rgb(255, 255, 255);
@@ -30,9 +32,22 @@ nav{
   top: 0;
 }
 
+.contenedorDolar{
+  margin-right: 10px;
+}
+
+#dolar{
+  color: rgb(16, 168, 16);
+}
+
+#dolarOficial{
+  color: black;
+}
+
 .logo{
   display: flex;
   align-items: center;
+  max-width: 500px;
 }
 
 .logo img{
@@ -56,8 +71,8 @@ a{
 .links a:hover{
   background-color: #101a31;
   color: white;
-  padding-right: 10px;
   border-radius: 10px;
+  transform: scale(1.1);
 }
 
 #btnRegistrarse{
@@ -102,24 +117,25 @@ a{
 }
 
 #inputsContainer{
-  animation: form_transition 3s;
-  padding: 40px;
-  backdrop-filter: blur(20px);
   justify-content: center;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 4;
 }
+
 #inputsContainer h1{
   margin-bottom: 15px;
 }
 
 #inputs{
+  backdrop-filter: blur(20px);
+  padding: 40px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   gap: 4;
+  margin-bottom: 20px;
 }
 
 #inputs input{
@@ -148,11 +164,11 @@ padding-bottom: 5px;
 }
 
 #inputs2 label{
-  color: gray;
+  color: #2e2d2d;
 }
 
 #selector{
-  color: gray;
+  color: #2e2d2d;
   width: 50px;
   margin: 5px;
   font-size: 20px;
@@ -169,9 +185,11 @@ padding-bottom: 5px;
   border-radius: 5px;
   box-shadow: -1px 7px 25px 0px rgba(0,0,0,0.75);
 }
+
 .tableContainer tr{
   text-align: center;
 }
+
 .formContainer{
    width: 400px;
   border-radius: 10px;
@@ -180,6 +198,7 @@ padding-bottom: 5px;
   padding: 8px;
   margin-bottom: 4px;
 }
+
 .btnLimpiar{
   color: white;
   margin-top: 12px;
@@ -187,34 +206,5 @@ padding-bottom: 5px;
   padding: 4px 12px;
   border-radius: 5px;
 }
-
-button{
-  transition: transform .4s;
-}
-
-/* Transiciones */
-
-@keyframes form_transition{
-  0%{transform: translateY(-40%);}
-  12% {transform: translateY(40%);}
-  24% {transform: translateY(-10%);}
-  36% {transform: translateY(10%);}
-  48% {transform: translateY(-10%);}
-  60% {transform: translateY(10%);}
-  72% {transform: translateY(-5%);}
-  84% {transform: translateY(5%);}
-  96% {transform: translateY(0%);}
-  100% {transform: translateY(0%);}
-
-}
-@keyframes button_animation{
-  0%{
-    transform: scale(1);
-  }
-  100%{
-    transform: scale(1.5);
-  }
-}
-
 
 
